WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79249
With tiled drawing enabled, pressing Down arrow after scrolling via mouse gesture causes page to jump back up to top
https://bugs.webkit.org/show_bug.cgi?id=79249
Summary
With tiled drawing enabled, pressing Down arrow after scrolling via mouse ges...
Adam Roben (:aroben)
Reported
2012-02-22 09:19:38 PST
To reproduce: 0. Enable tiled drawing 1. Go to
http://www.webkit.org/blog/
2. Scroll down a bit using a 1-finger swipe on a Magic Mouse (I haven't tested other mice) 3. Press the Down arrow The page jumps back up to the top, then scrolls down one "arrow's worth". It's as if there are two different scroll offsets being tracked: one for gesture scrolls, and one for keyboard scrolls.
Attachments
Patch
(2.77 KB, patch)
2012-02-28 18:29 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-02-22 09:19:56 PST
<
rdar://problem/10910908
>
Adam Roben (:aroben)
Comment 2
2012-02-22 10:25:31 PST
<
rdar://problem/10866273
>
Anders Carlsson
Comment 3
2012-02-28 18:29:09 PST
Created
attachment 129371
[details]
Patch
Sam Weinig
Comment 4
2012-02-28 18:34:02 PST
Comment on
attachment 129371
[details]
Patch I think the ScrollableArea should be the one with a concept of the scroll position and the animator simply queries it. That can be a clean up though.
Anders Carlsson
Comment 5
2012-02-28 18:36:20 PST
Committed
r109183
: <
http://trac.webkit.org/changeset/109183
>
Adam Klein
Comment 6
2012-02-29 10:49:24 PST
This seems to have broken a bunch of Chromium scrolling tests:
https://bugs.webkit.org/show_bug.cgi?id=79878
. There are links to the failures from there, but the short story is that the Chromium tests aren't seeing any rubberbanding. Does it seem reasonable that this change would cause such regressions?
Anders Carlsson
Comment 7
2012-02-29 11:21:56 PST
(In reply to
comment #6
)
> This seems to have broken a bunch of Chromium scrolling tests:
https://bugs.webkit.org/show_bug.cgi?id=79878
. There are links to the failures from there, but the short story is that the Chromium tests aren't seeing any rubberbanding. Does it seem reasonable that this change would cause such regressions?
Weird - I'll take a look right away.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug