With tiled drawing enabled, pressing Down arrow after scrolling via mouse gesture causes page to jump back up to top https://bugs.webkit.org/show_bug.cgi?id=79249 <rdar://problem/10866273>

Reviewed by Sam Weinig.

ScrollableArea::notifyScrollPositionChanged must make sure that the scroll animator position is kept up to date.

* platform/ScrollAnimator.cpp:
(WebCore::ScrollAnimator::setCurrentPosition):
(WebCore):
* platform/ScrollAnimator.h:
(ScrollAnimator):
* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::notifyScrollPositionChanged):

Canonical link: https://commits.webkit.org/96940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109183 268f45cc-cd09-0410-ab3c-d52691b4dbfc